--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+.DS_Store
+Thumbs.db
+
 /node_modules
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
+
 .env
 .env.backup
 .phpunit.result.cache
