--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ewereka/laravel-extra-validation": "^0.0.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^6.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
