--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
-        "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "1.24.1",
         "sass-loader": "^7.1.0",
         "vue-template-compiler": "2.6.10"
+    },
+    "dependencies": {
+        "jquery": "3.4.1",
+        "lodash": "^4.17.13",
+        "popper.js": "^1.12",
+        "jquery-ui": "1.12.1",
+        "select2": "4.0.12"
     }
 }
