--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "php": "^7.2",
         "ewereka/laravel-extra-validation": "^0.0.2",
         "fideloper/proxy": "^4.0",
+        "hashids/hashids": "^4.0",
+        "joshtronic/php-loremipsum": "^1.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0"
