--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     },
     "dependencies": {
         "jquery": "3.4.1",
+        "jquery-ui": "1.12.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "jquery-ui": "1.12.1",
-        "select2": "4.0.12"
+        "select2": "4.0.12",
+        "starrr": "2.0.4"
     }
 }
