--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "embed/embed": "^3.4",
         "ewereka/laravel-extra-validation": "^0.0.2",
         "fideloper/proxy": "^4.0",
         "hashids/hashids": "^4.0",
         "joshtronic/php-loremipsum": "^1.0",
+        "kodeine/laravel-meta": "master",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0"
