🚧 Sitter Continue Reg/Profile done

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "jquery": "3.4.1",
+        "jquery-mask-plugin": "1.14.16",
         "jquery-ui": "1.12.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
