--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "2.6.10"
     },
     "dependencies": {
+        "datatables.net": "1.10.20",
         "jquery": "3.4.1",
         "jquery-mask-plugin": "1.14.16",
         "jquery-ui": "1.12.1",
